<resources>
    <string name="app_name">Chenille</string>
    <string name="Fond">Fond</string>
    <string name="BtnFamille">BtnFamille</string>
    <string name="BtnTravail">BtnTravail</string>
    <string name="Aiguille">Aiguille</string>
    <string name="BtnVoyage">BtnVoyage</string>
    <string name="BtnDehors">BtnDehors</string>
    <string name="BtnJoker">BtnJoker</string>
    <string name="BtnPense">BtnPense</string>
    <string name="BtnMaison">BtnMaison</string>
    <string name="BtnPasNvl">BtnPasNvl</string>
    <string name="BtnRentrer">BtnRentrer</string>
    <string name="Titre">Famille Le Nézet</string>
    <string name="Logo">Logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyAtJai9838-7gNQsQhaEg_svsIHyDpd4QM</string>
    <string name="LeNezet">Le Nézet</string>
    <string name="Famille">Famille</string>
    <string name="MenuInfos">Infos</string>
    <string name="MenuGPS">GPS</string>
    <string name="MenuNotif">Notifications</string>
    <string name="MenuAiguille">Choix aiguille</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="paramGps">Paramètres GPS</string>
    <string name="GpsDurationUDate">Durée entre 2 mise à jour de la position \nGPS :</string>
    <string name="Vitesse">Vitesse</string>
    <string name="VoyageSpeedChoice">Vitesse minimale pour la position \nVoyage :</string>
    <string name="SpeedUnit">km/h</string>
    <string name="GPSDistanceUpdate">Distance pour une mise à jour de la \nposition GPS</string>
    <string name="DayOfWeek">DayStart</string>
    <string name="PositionCalendar">PositionSelected</string>
    <string name="AllDay">Tous les jours</string>
    <string name="Annuler">Annuler</string>
    <string name="Confirmer">Confirmer</string>
    <string name="Manual">Manuel</string>
    <string name="Auto">Auto</string>
    <string name="AutoManual">AutoManuel</string>
    <string name="None" />
    <string name="Day">Day</string>
    <string name="Lundi">Lu</string>
    <string name="Vendredi">Ve</string>
    <string name="Samedi">Sa</string>
    <string name="Dimanche">Di</string>
    <string name="Mardi">Ma</string>
    <string name="Mercredi">Me</string>
    <string name="Jeudi">Je</string>
    <string name="HourStart">Heure de début</string>
    <string name="HourEnd">Heure de fin</string>
    <string name="TextDurationPicker">L\'aiguille restera dans cette position pour la durée indiquée à partir de la validation de l\'évènement.</string>
</resources>
