<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/Aiguille"
        android:layout_width="46dp"
        android:layout_height="130dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/Aiguille"
        android:cropToPadding="false"
        android:rotation="0"
        android:src="@mipmap/aig_defaut"
        android:transformPivotX="23dp"
        android:transformPivotY="116.5dp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintEnd_toEndOf="@+id/Fond"
        app:layout_constraintStart_toStartOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@mipmap/aig_defaut"
        tools:layout_conversion_absoluteHeight="47dp"
        tools:layout_conversion_absoluteWidth="123dp"
        tools:srcCompat="@mipmap/aig_defaut" />

    <ImageView
        android:id="@+id/Fond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Fond"
        android:scaleType="fitCenter"
        android:src="@mipmap/fond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titre"
        app:layout_constraintVertical_bias="0.234"
        app:srcCompat="@mipmap/fond"
        tools:srcCompat="@mipmap/fond" />

    <ImageView
        android:id="@+id/BtnFamille"
        android:layout_width="76dp"
        android:layout_height="49dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/BtnFamille"
        android:src="@mipmap/famille"
        app:layout_constraintEnd_toEndOf="@+id/Fond"
        app:layout_constraintStart_toStartOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:srcCompat="@mipmap/famille" />

    <ImageView
        android:id="@+id/BtnAuTravail"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/BtnTravail"
        android:src="@mipmap/autravail"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintEnd_toEndOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@mipmap/autravail" />

    <ImageView
        android:id="@+id/BtnVoyage"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/BtnVoyage"
        android:src="@mipmap/voyage"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintEnd_toEndOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:layout_constraintVertical_bias="0.398"
        app:srcCompat="@mipmap/voyage" />

    <ImageView
        android:id="@+id/BtnDehors"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/BtnDehors"
        android:src="@mipmap/dehors"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintEnd_toEndOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:layout_constraintVertical_bias="0.751"
        app:srcCompat="@mipmap/dehors" />

    <ImageView
        android:id="@+id/BtnJoker"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/BtnJoker"
        android:src="@mipmap/joker"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintEnd_toEndOf="@+id/Fond"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/Fond"
        app:srcCompat="@mipmap/joker" />

    <ImageView
        android:id="@+id/BtnPenseAVous"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/BtnPense"
        android:src="@mipmap/penseavous"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintEnd_toEndOf="@+id/Fond"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/Fond"
        app:srcCompat="@mipmap/penseavous" />

    <ImageView
        android:id="@+id/BtnALaMaison"
        android:layout_width="66dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/BtnMaison"
        android:src="@mipmap/alamaison"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintStart_toStartOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:layout_constraintVertical_bias="0.78"
        app:srcCompat="@mipmap/alamaison" />

    <ImageView
        android:id="@+id/BtnPasDeNouvelles"
        android:layout_width="49dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/BtnPasNvl"
        android:src="@mipmap/pasdenouvelle"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintStart_toStartOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:layout_constraintVertical_bias="0.389"
        app:srcCompat="@mipmap/pasdenouvelle" />

    <ImageView
        android:id="@+id/BtnVeuxRentrer"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/BtnRentrer"
        android:src="@mipmap/veuxrentrer"
        app:layout_constraintBottom_toBottomOf="@+id/Fond"
        app:layout_constraintStart_toStartOf="@+id/Fond"
        app:layout_constraintTop_toTopOf="@+id/Fond"
        app:layout_constraintVertical_bias="0.120000005"
        app:srcCompat="@mipmap/veuxrentrer" />

    <TextView
        android:id="@+id/Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Titre"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/Black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AutoManualBtn" />

    <ToggleButton
        android:id="@+id/AutoManualBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:padding="2dp"
        android:text="@string/None"
        android:textOff="@string/Auto"
        android:textOn="@string/Manual"
        android:textSize="18sp"
        android:theme="@style/ToggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/GpsFamille"
        android:layout_width="10dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/CalendarFamille"
        app:layout_constraintStart_toEndOf="@+id/BtnFamille"
        app:layout_constraintTop_toTopOf="@+id/CalendarFamille"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gps_icon" />

    <ImageView
        android:id="@+id/GpsTravail"
        android:layout_width="10dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/CalendarTravail"
        app:layout_constraintStart_toEndOf="@+id/CalendarTravail"
        app:layout_constraintTop_toTopOf="@+id/CalendarTravail"
        app:srcCompat="@drawable/gps_icon" />

    <ImageView
        android:id="@+id/GpsJoker"
        android:layout_width="10dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/CalendarJoker"
        app:layout_constraintStart_toEndOf="@+id/BtnJoker"
        app:layout_constraintTop_toTopOf="@+id/CalendarJoker"
        app:srcCompat="@drawable/gps_icon" />

    <ImageView
        android:id="@+id/GpsMaison"
        android:layout_width="10dp"
        android:layout_height="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/CalendarMaison"
        app:layout_constraintStart_toStartOf="@+id/BtnALaMaison"
        app:layout_constraintTop_toTopOf="@+id/CalendarMaison"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gps_icon" />

    <ImageView
        android:id="@+id/CalendarVeuxRentrer"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/BtnVeuxRentrer"
        app:layout_constraintStart_toStartOf="@+id/BtnVeuxRentrer"
        app:srcCompat="@drawable/calendar_icon" />

    <ImageView
        android:id="@+id/CalendarFamille"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/GpsFamille"
        app:layout_constraintTop_toTopOf="@+id/BtnFamille"
        app:srcCompat="@drawable/calendar_icon" />

    <ImageView
        android:id="@+id/CalendarTravail"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/BtnAuTravail"
        app:layout_constraintTop_toTopOf="@+id/BtnAuTravail"
        app:srcCompat="@drawable/calendar_icon" />

    <ImageView
        android:id="@+id/CalendarJoker"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/GpsJoker"
        app:layout_constraintTop_toTopOf="@+id/BtnJoker"
        app:srcCompat="@drawable/calendar_icon" />

    <ImageView
        android:id="@+id/CalendarPenseAVous"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/BtnPenseAVous"
        app:layout_constraintTop_toTopOf="@+id/BtnPenseAVous"
        app:srcCompat="@drawable/calendar_icon" />

    <ImageView
        android:id="@+id/CalendarMaison"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toStartOf="@+id/GpsMaison"
        app:layout_constraintTop_toTopOf="@+id/BtnALaMaison"
        app:srcCompat="@drawable/calendar_icon" />

</android.support.constraint.ConstraintLayout>