<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/GpsSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paramGps"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/paramGps" />

    <TextView
        android:id="@+id/DurationUpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/GpsDurationUDate"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GpsSettings" />

    <Spinner
        android:id="@+id/durationSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/DurationSpinner"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/NumberPickerDuration"
        app:layout_constraintEnd_toEndOf="@+id/DurationUpDate"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="@+id/DurationUpDate"
        app:layout_constraintTop_toTopOf="@+id/NumberPickerDuration" />

    <Spinner
        android:id="@+id/distanceSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/DistanceSpinner"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/NumberPickerDistance"
        app:layout_constraintStart_toStartOf="@+id/durationSpinner"
        app:layout_constraintTop_toTopOf="@+id/NumberPickerDistance"
        app:layout_constraintVertical_bias="0.5" />

    <NumberPicker
        android:id="@+id/NumberPickerDuration"
        android:layout_width="60dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/durationSpinner"
        app:layout_constraintStart_toStartOf="@+id/DurationUpDate"
        app:layout_constraintTop_toBottomOf="@+id/DurationUpDate" />

    <NumberPicker
        android:id="@+id/NumberPickerDistance"
        android:layout_width="60dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/durationSpinner"
        app:layout_constraintStart_toStartOf="@+id/DurationUpDate"
        app:layout_constraintTop_toBottomOf="@+id/DistanceUpDate" />

    <NumberPicker
        android:id="@+id/NumberPickerSpeed"
        android:layout_width="60dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/NumberPickerDuration"
        app:layout_constraintTop_toBottomOf="@+id/textSpeedChoice" />

    <TextView
        android:id="@+id/textSpeedChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/VoyageSpeedChoice"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/DurationUpDate"
        app:layout_constraintTop_toBottomOf="@+id/NumberPickerDistance" />

    <TextView
        android:id="@+id/textSpeedUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SpeedUnit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/NumberPickerSpeed"
        app:layout_constraintStart_toStartOf="@+id/distanceSpinner"
        app:layout_constraintTop_toTopOf="@+id/NumberPickerSpeed" />

    <TextView
        android:id="@+id/DistanceUpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/GPSDistanceUpdate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/DurationUpDate"
        app:layout_constraintTop_toBottomOf="@+id/NumberPickerDuration" />

</android.support.constraint.ConstraintLayout>